# ADASPy

./: .gitignore  README.md  pyproject.toml
src/: requirements.txt
src/adaspy/: __init__.py  adaspy-gradio-app.py
src/adaspy/backend/: agent.py  auth.py  dependencies.py  main.py  models.py  team.py
src/adaspy/dspy_examples/: adaspy.ipynb  dspy_rag.ipynb  weaviate_load_data.ipynb
src/adaspy/frontend/: streamlit_app.py
src/adaspy/ml/: adaspy.py
src/code/: docker-compose.yml
src/code/backend/: agent.py  auth.py  database.py  dependencies.py  main.py  models.py  team.py
src/code/frontend/: streamlit_app.py
