[project]
name = "adaspy"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "dspy-ai>=2.4.14",
    "weaviate-client>=4.8.0",
    "openai>=1.44.1",
    "ollama>=0.3.3",
    "ipykernel>=6.29.5",
    "python-dotenv>=1.0.1",
    "gradio>=4.44.0",
    "passlib>=1.7.4",
    "psycopg2-binary>=2.9.9",
    "python-jose>=3.3.0",
    "streamlit>=1.38.0",
    "bcrypt==4.0.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
